RESOLVED FIXED209181
[WKTR] Crash when trying to open a new window in an ephemeral session test
https://bugs.webkit.org/show_bug.cgi?id=209181
Summary [WKTR] Crash when trying to open a new window in an ephemeral session test
Chris Dumez
Reported 2020-03-17 09:10:51 PDT
Crash when trying to open a new window in an ephemeral session tests.
Attachments
Patch (3.75 KB, patch)
2020-03-17 09:12 PDT, Chris Dumez
no flags
Patch (3.75 KB, patch)
2020-03-17 09:15 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-03-17 09:12:13 PDT
Chris Dumez
Comment 2 2020-03-17 09:15:24 PDT
Geoffrey Garen
Comment 3 2020-03-17 09:42:16 PDT
Comment on attachment 393758 [details] Patch Seems right, but EWS is losing its mind
Chris Dumez
Comment 4 2020-03-17 10:31:47 PDT
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 393758 [details] > Patch > > Seems right, but EWS is losing its mind It is working from home.
Geoffrey Garen
Comment 5 2020-03-17 10:33:07 PDT
🤣
WebKit Commit Bot
Comment 6 2020-03-17 11:17:05 PDT
Comment on attachment 393758 [details] Patch Clearing flags on attachment: 393758 Committed r258562: <https://trac.webkit.org/changeset/258562>
WebKit Commit Bot
Comment 7 2020-03-17 11:17:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2020-03-17 11:18:16 PDT
Note You need to log in before you can comment on or make changes to this bug.