[WKTR] Crash when trying to open a new window in an ephemeral session test https://bugs.webkit.org/show_bug.cgi?id=209181

Reviewed by Geoffrey Garen.

Tools:

Make sure that the new WKWebView is using the same data store as its related WKWebView.

* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::platformCreateOtherPage):

LayoutTests:

Add layout test coverage.

* fast/dom/window-open-ephemeral-expected.txt: Added.
* fast/dom/window-open-ephemeral.html: Added.


Canonical link: https://commits.webkit.org/222100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258562 268f45cc-cd09-0410-ab3c-d52691b4dbfc